[tool.poetry]
name = "hh-ru"
version = "0.1.0"
description = ""
authors = ["Ksenia Kovaleva <kovalevaksenia21@gmail.com>"]
readme = "README.md"
packages = [{include = "hh"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
